# woorpje

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Main.cc  config.h.in  main.cpp  readme.md  testfile  woorpje2smt.cpp
cmake_modules/: FindCGraph.cmake  FindCVC4.cmake  FindMurmur.cmake  FindSMTParser.cmake  FindZ3.cmake
documentation/: CMakeLists.txt  bechmark1.txt.table  bechmark2.txt.table  bechmark3.txt.table  bechmark4.txt.table  bechmark5.txt.table  bechmarkLevi1.txt.table  bechmarkLevi2.txt.table  bechmarkLevi3.txt.table  bechmarkLevi4.txt.table  bechmarkLevi5.txt.table  benchmarks.adoc  benchmarksLevi.adoc  woorpje.adoc  woorpjeLevi.adoc
documentation/examples/: Levis.dot  example.eq  example.out  exampleLevi.eq  exampleLevi.out  help.out  linexample.eq  linexample.out  linexampleLevi.eq  linexampleLevi.out
libs/: CMakeLists.txt
libs/glucose/: CMakeLists.txt
libs/glucose/core/: CMakeLists.txt  Solver.cc  Solver.h  SolverTypes.h
libs/glucose/mtl/: CMakeLists.txt  Map.h  Vec.h
libs/glucose/utils/: CMakeLists.txt  CMakeLists.txt~  Options.cc  Options.h
libs/host/: CMakeLists.txt  dummy.cpp  hash.cpp  linux.cpp
libs/host/pubinclude/host/: exitcodes.hpp  hash.hpp  resources.hpp  trace.hpp
libs/parser/: CMakeLists.txt  CMakeLists.txt~  keywords.gperf  lexer.lex  parser.cpp  parsing.cpp
libs/parser/pubinclude/parser/: parser.hpp  parsing.hpp  tokens.hpp
libs/parser/smtparser/: CMakeLists.txt  parser.cpp  util.hpp
libs/parser/standard/: CMakeLists.txt  keywords.gperf  lexer.hpp  lexer.lex  parser.cpp  parser.hpp  tokens.hpp
libs/smt/: CMakeLists.txt  core.cpp  cvc4.cpp  passthrough.hpp  z3.cpp
libs/smt/pubinclude/smt/: smtsolvers.hpp
libs/solvers/: CMakeLists.txt
libs/solvers/levis/: CMakeLists.txt  graph.cpp  graph.hpp  heuristics.cpp  heuristics.hpp  passed.cpp  passed.hpp  rules.hpp  solver.cpp  solver.hpp
libs/solvers/pubinclude/: timing.hpp
libs/solvers/pubinclude/solvers/: exceptions.hpp  simplifiers.hpp  solvers.hpp  timing.hpp
libs/solvers/puresmt/: CMakeLists.txt  solver.cpp  solver.hpp
libs/solvers/reachability/: CMakeLists.txt  Murmur3.cpp  core.hpp  solver.cpp
libs/solvers/satencoding/: CMakeLists.txt  Main.cc  solver.cpp  solver.hpp
libs/solvers/satencoding/regular/: automaton.cpp  commons.h  encoder.cpp  encoding.h  nfa.cpp  nfa.h  nfaencoder.cpp  partition.cpp  proplog.cpp  rAbs.cpp  regencoding.h  util.cpp  wordencoder.cpp
libs/words/: CMakeLists.txt  algorithms.cpp  linconstraint.cpp  outputsmt.cpp  regconstraint.cpp  words.cpp
libs/words/pubinclude/words/: algorithms.hpp  constraints.hpp  exceptions.hpp  linconstraint.hpp  regconstraints.hpp  regex.hpp  words.hpp
package/: CMakeLists.txt  PKGBUILD.in  woorpje.install
test/: CMakeLists.txt
test/regular/: 001.smt  002.smt  003.smt  loop.smt  opt.smt  p136.smt2  p144.smt2  p151.smt2  p33.smt2  p60.smt2  p72.smt2  plus.smt  range.smt  test.smt  url.smt
test/track1/: CMakeLists.txt
tests/: commons.cpp  main.cpp  proplog.cpp
tests/solvers/satencoding/regular/: commons.cpp
