find_package (Murmur REQUIRED)
add_library (host)
target_sources (host PRIVATE hash.cpp)
if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
target_sources (host PRIVATE linux.cpp)
else()
target_source (host PRIVATE dummy.cpp)
endif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
target_link_libraries (host ${MURMUR_LIBRARIES})
target_include_directories (host PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/pubinclude)
target_compile_options (host PRIVATE -Wall -Wpedantic -Wextra)
